src/main/java/com/example/room/chat/reference/errors/core/package-info.java
/**
 * Contains the main component of error handling system
 *
 * @author Igor Rybak
 */
package com.example.room.chat.reference.errors.core;